syntax = "proto3";

package pb;

option go_package = "github.com/wpcodevo/golang-mongodb/pb";

import "user.proto";

message ForgotPasswordInput {
  string email = 1;
}

message ForgotPasswordResponse { User user = 1; }

